# GHOSTWIRE

./: .gitignore  BUGFIX_PLAN.md  README.md  SPEC.md  package-lock.json  package.json  pyproject.toml  start.sh  tsconfig.json
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: BeaconChart.tsx  FingerprintTable.tsx  NetworkGraph.tsx  ProtoBreakdown.tsx  SessionView.tsx  ThreatPanel.tsx  Timeline.tsx
engine/: __init__.py  cli.py
engine/detection/: beacon.py  dns_threats.py  hunt.py  scorer.py
engine/export/: __init__.py  mitre_map.py  report.py  stix.py
engine/fingerprint/: __init__.py  c2_database.py  ja4_engine.py  ja4h_engine.py  ja4ssh_engine.py
engine/parser/: __init__.py  pcap_loader.py  protocol.py  session.py
engine/recon/: __init__.py
samples/: c2_beacon_test.report.md  c2_beacon_test.stix.json
server/: index.ts
tests/: __init__.py  test_beacon.py  test_c2_database.py  test_cli.py  test_dns_threats.py  test_protocol.py  test_session.py
